--- a/index.css
+++ b/index.css
@@ -74,10 +74,24 @@ body {
     width: 100%;
     height: 100%;
     display: none;
+    transition: opacity 0.5s, transform 0.5s;
 }
 
 .carousel-item.active {
     display: block;
+    animation: fadeIn 0.5s;
+}
+
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: scale(0.9);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 
 .carousel img {
