--- a/index.css
+++ b/index.css
@@ -1,40 +1,3 @@
-@media only screen and (max-width: 768px){
-
-    body{
-        font-size: 16px;
-        justify-content: center;
-    }
-
-    #navbar{
-        width: 100%;
-        padding: 0.5em;
-    }
-
-    #header{
-        width: 100%;
-        padding: 1em;
-    }
-
-    #contact{
-        width: 100%;
-    }
-
-    .footer-content{
-        font-size: 15px;
-    }
-
-    .carousel-container{
-        width: 100%;
-    }
-
-    .project-buttons{
-        flex-direction: column;
-    }
-
-    .project-button{
-        margin-bottom: 10px;
-    }
-}
 
 body {
     font-family: Arial, sans-serif;
@@ -43,29 +6,36 @@ body {
     background-color: #f7f7f7;
 }
 
-#navbar {
+@media (max-width: 768px) {
+    body {
+        max-width: 100vw;
+        margin: 0 auto;
+    }
+}
+
+.navbar {
     background-color: #8BC34A;
     padding: 1em;
-    text-align: center;
+    display: flex;
     position: fixed;
-    width: 100%;
     z-index: 500;
     font-size: large;
     font-weight: bold;
 }
 
-#navbar ul {
+.navbar ul {
     list-style: none;
-    margin: 0;
+    display: flex;
+    margin: 0 auto;
     padding: 0;
 }
 
-#navbar li {
+.navbar li {
     display: inline-block;
     margin-right: 20px;
 }
 
-#navbar a {
+.navbar a {
     color: #fff;
     text-decoration: none;
     transition: all 0.3s ease-in-out;
@@ -103,16 +73,30 @@ body {
     width: 100%;
     height: 100%;
     margin: 0 auto; 
+    max-width: 800px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .carousel-item {
     position: absolute;
     top: 0;
-    left: 0;
+    left: 12%;
     width: 100%;
     height: 100%;
-    display: none;
+    display: block;
+    max-width: 800px;
+    margin: 0 auto;
     transition: opacity 0.5s, transform 0.5s;
+}
+
+@media (min-width: 1024px) {
+    .carousel-item.active {
+        max-width: 250px;
+        margin: 0 auto;
+        left: 33.33%;
+    }
 }
 
 .carousel-item.active {
@@ -131,11 +115,7 @@ body {
     }
 }
 
-.carousel img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+
 
 .carousel-controls {
     bottom: 0;
@@ -165,7 +145,7 @@ body {
     transition: all 0.5s ease-in-out;
 }
 
-#navbar a:hover {
+.navbar a:hover {
     color: black;
     transition: all 0.3s ease-in-out;
 }
@@ -184,12 +164,14 @@ body {
     padding-top: 2vh;
 }
 
-#about-me, #projects {
+#projects {
     padding: 2em;
     text-align: center;
     margin: 0 auto;
     max-width: 800px;
 }
+
+#about-me
 
 #projects {
     margin-bottom: 10px;
@@ -203,7 +185,16 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     max-width: 250px;
     margin: 0 auto;
-    position: relative;
+}
+
+.carousel img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin: 0 auto;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .carousel-item img {
@@ -211,18 +202,19 @@ body {
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
-}
+    margin: 0 auto;
+    }
 
 
 .carousel-item .description {
     position: absolute;
     top: 0;
     left: 0;
-    width: 92%;
-    height: 96%;
+    width: 100%;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
     color: #fff;
-    padding: 10px;
+    box-sizing: border-box;
     border-radius: 10px;
     opacity: 0;
     transition: opacity 0.3s;
@@ -240,14 +232,33 @@ footer {
     padding: 1em;
     text-align: left;
     bottom: 0;
-    width: auto;
-    height: 5em;
-    padding-top: 5em;
+    width: 100%;
+    height: 15em;
+    padding-top: 3em;
+}
+
+@media (max-width: 767px) {
+    footer {
+        height: auto;
+        padding: 1em;
+    }
+    .footer-content {
+        flex-direction: column;
+        align-items: center;
+    }
+    .footer-item {
+        margin: 0.5em 0;
+        text-align: center;
+    }
+    .footer-item ul {
+        justify-content: center;
+    }
 }
 
 .footer-content {
     display: flex;
     justify-content: space-between;
+    width: 100%;
 }
 
 .footer-item {
@@ -280,6 +291,19 @@ footer a {
 #terms-button {
     font-weight: bolder;
     font-size: large ;
+    width: 250px;
+}
+
+#terms-button:hover {
+    color: black;
+    transition: all 0.5s ease-in-out;
+}
+
+@media (min-width: 1024px) {
+    #terms-button {
+        width: 300px;
+        margin-left: 42%;
+    }
 }
 
 footer a:hover {
