--- a/index.css
+++ b/index.css
@@ -171,7 +171,11 @@ body {
     max-width: 800px;
 }
 
-#about-me
+#about-me{
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 5%;
+}
 
 #projects {
     margin-bottom: 10px;
@@ -334,16 +338,17 @@ body.lock-scroll {
 #terms-popup {
     position: fixed;
     color: black;
-    top: 10%;
+    top: 0%;
     left: 33%;
-    transform: translate(-50%, -50%);
     background-color: #fff;
-    padding: 20px;
+    margin-top: 2px;
+    padding-top: 1em;
+    padding-bottom: 1em;
     border: 1px solid #ddd;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 500px;
-    max-width: 90%;
+    max-width: 75%;
     opacity: 0;
     transform-origin: center;
     transform: scale(0.9);
@@ -352,7 +357,6 @@ body.lock-scroll {
   }
 
   #close-button {
-    margin-left: 40%;
     background-color: #8BC34A;
     color: #fff;
     border: none;
@@ -361,6 +365,21 @@ body.lock-scroll {
     cursor: pointer;
   }
 
+  @media (max-width: 770px) {
+    #terms-popup {
+        left: 0;
+        width: 100%;
+        max-width: 95%;
+        height: 100%;
+        font-size: 0.75em;
+        margin: 10px;
+        padding: 50px 10px;
+        padding-left: 5px;
+        padding-right: 5px;
+        transform-origin: top;
+    }
+  }
+  
   #terms-popup.show {
     animation: show-terms-popup 0.3s ease-in-out forwards;
     visibility: visible;
